# color-quantization

./: .gitignore  CMakeLists.txt  README.md  meson.build
src/: CMakeLists.txt  dither.cpp  dither.h  image.cpp  image.h  log.h  main.cpp  palette.cpp  palette.h  quantization.cpp  quantization.h  quantize.cpp  quantize.h  shared.h
src/pch/: cqt_pc.h  cqt_pch.h
test/: CMakeLists.txt  image.test.cpp  palette.test.cpp  quantization.test.cpp  quantize.test.cpp  test.cpp
